@@ -1,7 +1,13 @@
+2011-01-10  john ffitch  <jpff@codemist.co.uk>
+
+	* Engine/fgens.c (gen49): Use csound->FileOpen2 rather than open
+	to get searching
+	(gen49): buffer used was in wrong units (chars v shorts)
+
 2010-12-28  john ffitch  <jpff@codemist.co.uk>
 
 	* Engine/symbtab.c (add_token): remove message if Opcode/Function
-	confusion 
+	confusion
 
 2010-12-18  john ffitch  <jpff@codemist.co.uk>
 
